# moveit_ompl_source

./: .gitignore  README.md
src/: .rosinstall  .rosinstall.bak
src/msg_package/: CMakeLists.txt  package.xml
src/msg_package/srv/: grasp.srv
src/ompl-release-release-kinetic-ompl/CMakeModules/: ompl.pc
src/ompl-release-release-kinetic-ompl/tests/resources/: config.h
src/sims/src/: ur5_shelf.cpp
src/test_main/: CMakeLists.txt  package.xml
src/test_main/src/: test_main_node.cpp
src/universal_robot-kinetic-devel/move_ur10_config/: CMakeLists.txt
src/universal_robot-kinetic-devel/move_ur10_config/config/: kinematics.yaml  ompl_planning.yaml  ur10.srdf  ur10_prm.srdf
src/universal_robot-kinetic-devel/move_ur10_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_execute.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  (+2 more)
src/ur_pick_srv_v2/: CMakeLists.txt  package.xml
src/ur_pick_srv_v2/src/: ur_pick_srv.cpp  ur_pick_srv.h
universal_robot-kinetic-devel/move_ur10_config/: .setup_assistant  package.xml
universal_robot-kinetic-devel/move_ur10_config/config/: ompl_planning.yaml
universal_robot-kinetic-devel/move_ur10_config/launch/: default_warehouse_db.launch  moveit.rviz  planning_pipeline.launch.xml  run_benchmark_ompl.launch  setup_assistant.launch
universal_robot-kinetic-devel/ur_description/launch/: ur10_display_sim.launch
universal_robot-kinetic-devel/ur_description/meshes/: desk1.stl  huojia1.stl
(+17 files in other folders)
